##
## autogenerated ChangeLog -- don't edit
##

2007-01-20 Saturday 10:38  Rocky Bernstein <rocky@panix.com>

	* bashdb.in, configure.ac, doc/bashdb.texi, test/Makefile.am,
	  test/dbg-test1.sh, test/dbg-test1.sh.in, test/list.right,
	  test/search.right: Change to make "make distcheck" work.

2007-01-20 Saturday 03:50  Rocky Bernstein <rocky@panix.com>

	* test/: brkpt2.right, bug-source.right, debug.right, finish.right,
	  frame.right, parm.right, sig.right: Line numbers changed bashdb
	  277 is now bashdb 275

2007-01-20 Saturday 03:24  Rocky Bernstein <rocky@panix.com>

	* configure.ac, doc/.cvsignore, test/misc.right: Get ready for
	  3.1-0.08 release

2007-01-19 Friday 21:58  Rocky Bernstein <rocky@panix.com>

	* NEWS, bashdb.in, dbg-show.inc, doc/bashdb.texi: Note $PS4.

2007-01-19 Friday 21:41  Rocky Bernstein <rocky@panix.com>

	* NEWS: What's new.

2007-01-04 Thursday 04:26  Rocky Bernstein <rocky@panix.com>

	* emacs/: Makefile.am, bashdb-test.el, bashdb.el, elk-test.el:
	  Tighten regulare expression and add 1st trivial emacs regression
	  test.

2006-12-28 Thursday 12:35  Rocky Bernstein <rocky@panix.com>

	* doc/bashdb-man.pod: Typo.

2006-12-28 Thursday 12:34  Rocky Bernstein <rocky@panix.com>

	* dbg-cmds.inc, doc/Makefile.am, doc/bashdb-man.pod:
	  doc/bashdb-man.pod: Document -Y|--vtrace option. Make html/man
	  customizations for links. Note unavailability of long options
	  sometimes.

	  doc/Makefile: Remove Perlisms. This is not part of Perl

	  dbg-cmds.inc: correct a comment

2006-12-27 Wednesday 16:45  Rocky Bernstein <rocky@panix.com>

	* doc/bashdb.texi: Example program bugs. Perhaps at one time I was
	  going to make use of these?

2006-12-26 Tuesday 21:20  Rocky Bernstein <rocky@panix.com>

	* test/trace.right: Last change made better output.

2006-12-26 Tuesday 21:19  Rocky Bernstein <rocky@panix.com>

	* dbg-list.inc: Don't linetrace if depth < 0; this removes that
	  bashdb call lines.
