@@ -13,7 +13,7 @@
 #   You should have received a copy of the GNU General Public License along
 #   with Bash; see the file COPYING.  If not, write to the Free Software
 #   Foundation, 59 Temple Place, Suite 330, Boston, MA 02111 USA.
-#$Id: Makefile.am,v 1.4 2007/01/20 11:32:29 rockyb Exp $
+#$Id: Makefile.am,v 1.5 2007/01/20 12:02:03 rockyb Exp $
 
 check_DATA := bashdb-test.el bashdb-test.el.in elk-test.el
 EXTRA_DIST := bashdb.el $(check_DATA)
@@ -25,5 +25,6 @@ endif
 test: check
 
 check:
-	$(EMACS) -batch -q -l $(srcdir)/bashdb-test.el $(srcdir)/elk-test.el
+	$(EMACS) -batch -q -l $(top_builddir)/emacs/bashdb-test.el $(srcdir)/elk-test.el
+
 
