@@ -2,6 +2,12 @@
 ## autogenerated ChangeLog -- don't edit
 ##
 
+2007-01-20 Saturday 11:32  Rocky Bernstein <rocky@panix.com>
+
+	* configure.ac, emacs/Makefile.am, emacs/bashdb-test.el,
+	  emacs/bashdb-test.el.in, test/Makefile.am, test/dbg-test1.sh:
+	  Things to make "make distcheck" work.
+
 2007-01-20 Saturday 10:38  Rocky Bernstein <rocky@panix.com>
 
 	* bashdb.in, configure.ac, doc/bashdb.texi, test/Makefile.am,
